--- a/src/app/core/teams/create-team/create-team.component.html
+++ b/src/app/core/teams/create-team/create-team.component.html
@@ -39,7 +39,7 @@
 			<label class="form-required">Team Admin</label>
 			<ng-select
 				name="teamAdmin"
-				bindLabel="userModel.name"
+				bindLabel="name"
 				placeholder="Search for user..."
 				style="width: 400px"
 				[(ngModel)]="teamAdmin"
