--- a/src/app/common/table/columns/expander/asy-expander-column.component.html
+++ b/src/app/common/table/columns/expander/asy-expander-column.component.html
@@ -1,4 +1,4 @@
-<ng-container cdkColumnDef [sticky]="_sticky" [stickyEnd]="_stickyEnd">
+<ng-container cdkColumnDef [sticky]="sticky" [stickyEnd]="stickyEnd">
 	<th cdk-header-cell style="width: 42px" *cdkHeaderCellDef></th>
 	<td cdk-cell *cdkCellDef="let item; let index = index">
 		<div
