--- a/src/app/common/table/columns/selection/asy-selection-column.component.html
+++ b/src/app/common/table/columns/selection/asy-selection-column.component.html
@@ -1,4 +1,4 @@
-<ng-container cdkColumnDef [sticky]="_sticky" [stickyEnd]="_stickyEnd">
+<ng-container cdkColumnDef [sticky]="sticky" [stickyEnd]="stickyEnd">
 	<th cdk-header-cell *cdkHeaderCellDef>
 		<div class="form-check" *ngIf="enableSelectAll && multi">
 			<input
