--- a/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
+++ b/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
@@ -56,7 +56,7 @@
 					<asy-header-filter
 						audit-distinct-value-filter
 						list-filter
-						[showSearch]="true"
+						showSearch
 					></asy-header-filter>
 				</th>
 				<td class="text-nowrap" cdk-cell *cdkCellDef="let entry">
@@ -70,7 +70,7 @@
 					<asy-header-filter
 						audit-distinct-value-filter
 						list-filter
-						[showSearch]="true"
+						showSearch
 					></asy-header-filter>
 				</th>
 				<td class="text-nowrap" cdk-cell *cdkCellDef="let entry">
