--- a/src/app/core/teams/view-team/general-details/general-details.component.html
+++ b/src/app/core/teams/view-team/general-details/general-details.component.html
@@ -163,7 +163,7 @@
 				<h2>Sub-Teams</h2>
 			</div>
 			<div class="card-body">
-				<app-list-sub-teams [embedded]="true" [parent]="team"></app-list-sub-teams>
+				<app-list-sub-teams embedded [parent]="team"></app-list-sub-teams>
 			</div>
 		</div>
 	</div>
