--- a/src/app/common/loading-overlay/loading-overlay.component.html
+++ b/src/app/common/loading-overlay/loading-overlay.component.html
@@ -1,10 +1,5 @@
 <div class="overlay" *ngIf="isLoading">
-	<notification
-		*ngIf="isError"
-		[message]="errorMessage"
-		[notificationType]="'danger'"
-		[showActions]="true"
-	>
+	<notification notificationType="danger" showActions *ngIf="isError" [message]="errorMessage">
 		<ng-template #notificationActions>
 			<button class="btn btn-primary" (click)="handleRetry()">Retry</button>
 		</ng-template>
